--- a/style.css
+++ b/style.css
@@ -2,19 +2,19 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Dancing Script';
 }
 
 html {
     background-color: palevioletred;
     color: white;
     font-size: 2rem;
-    font-family: 'Dancing Script';
 }
 
 .dad {
-    display :none;
+    display: none;
     /* animation: appear-animation 1s ease-in-out forwards; */
-    
+
 }
 
 .container {
@@ -22,7 +22,7 @@ html {
 }
 
 .dad_lyric {
-    display: grid;  
+    display: grid;
     justify-content: center;
     align-content: center;
     line-height: 4rem;
@@ -31,7 +31,7 @@ html {
 .dad_container {
     width: 100%;
     height: 100vh;
-    display: grid;  
+    display: grid;
     justify-content: center;
     align-content: center;
 }
@@ -59,7 +59,7 @@ html {
 }
 
 .message {
-    display: grid;  
+    display: grid;
     justify-content: center;
     align-content: center;
     flex: 1;
@@ -451,7 +451,7 @@ html {
     0% {
         opacity: 0;
         transform: translateY(50px);
-    }   
+    }
 
     100% {
         opacity: 1;
@@ -463,15 +463,19 @@ html {
     0% {
         opacity: 1;
     }
+
     40% {
         opacity: 1;
     }
+
     60% {
         opacity: 0.8;
     }
+
     80% {
         opacity: 0.5;
     }
+
     100% {
         opacity: 0;
         display: none;
@@ -482,6 +486,7 @@ html {
     0% {
         display: block;
     }
+
     100% {
         display: block;
     }
@@ -504,31 +509,319 @@ html {
     animation: fall 1s ease-in infinite;
 }
 
+
+/* letter */
+@keyframes upthenscale {
+    0% {
+        transform: translateY(250px);
+    }
+
+    50% {
+        transform: translateY(0);
+    }
+
+    60% {
+        height: 100px;
+        width: 90px;
+        transform: translateY(0);
+    }
+
+    100% {
+        height: 250px;
+        width: 100%;
+        transform: translateY(0);
+    }
+}
+
+@keyframes scalethendown {
+    0% {
+        height: 250px;
+        width: 100%;
+        transform: translateY(0);
+    }
+
+    50% {
+        height: 100px;
+        width: 90px;
+        transform: translateY(0);
+    }
+
+    60% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(250px);
+    }
+}
+
+@keyframes waitfade {
+
+    0%,
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes wiggle {
+    0% {
+        transform: translateY(310px) rotate(0);
+    }
+
+    25% {
+        transform: translateY(310px) rotate(2deg);
+    }
+
+    50% {
+        transform: translateY(310px) rotate(0deg);
+    }
+
+    75% {
+        transform: translateY(310px) rotate(-2deg);
+    }
+
+    100% {
+        transform: translateY(310px) rotate(0);
+    }
+}
+
+
+.content-letter{
+    font-size: 20px;
+
+}
+
+.letter {
+    z-index: 10000;
+    color: red;
+    font-size: 2rem;
+    font-weight: bold;
+    position: fixed;
+    top: -1vh;
+    left: 0;
+    transform: translateY(-50%);
+    /* animation: fall 15s ease-in infinite !important; */
+    /*  */
+    max-width: 350px;
+    height: 375px;
+}
+
+.letter--open .paper {
+    animation-name: upthenscale;
+    animation-duration: .6s;
+    animation-fill-mode: forwards;
+}
+
+.letter--close .paper {
+    animation-name: scalethendown;
+    animation-duration: .4s;
+    animation-fill-mode: forwards;
+}
+
+.letter--open .paper-content {
+    animation-name: waitfade;
+    animation-duration: 1.5s;
+    animation-fill-mode: forwards;
+}
+
+.letter--open .envelope {
+    animation: pause;
+}
+
+.paper-content {
+    color: #545454;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    padding: 25px;
+    opacity: 0;
+}
+
+.paper {
+    height: 50px;
+    width: 90px;
+    background: #f1f0c3;
+    transform: translateY(250px);
+    margin: 0 auto;
+    transition: transform 0.3s 0.1s ease;
+    border-radius: 2px;
+    position: relative;
+}
+
+.envelope {
+    width: 94px;
+    height: 60px;
+    background: #f36363;
+    position: relative;
+    margin: auto;
+    z-index: 2;
+    cursor: pointer;
+    border-radius: 3px;
+    transition: box-shadow 0.3s ease;
+    transform: translateY(310px);
+    animation: wiggle 0.3s 0.2s infinite;
+
+    &:hover {
+        animation: pause;
+
+        & .envelope-paper {
+            transform: translateY(-20px);
+        }
+
+        & .envelope-flap {
+            transform: translateY(-45px);
+        }
+
+        & .envelope-detail::after {
+            visibility: hidden;
+        }
+    }
+}
+
+.envelope-paper {
+    height: 50px;
+    width: 90px;
+    background: #f1f0c3;
+    transform: translateY(0);
+    margin: 0 auto;
+    transition: transform 0.3s 0.1s ease;
+    border-radius: 2px;
+    position: absolute;
+    border: 2px solid transparent;
+}
+
+.letter--open .envelope-paper {
+    visibility: hidden;
+}
+
+.letter--open .envelope-detail::after {
+    visibility: hidden;
+}
+
+
+.letter--close .envelope-paper {
+    visibility: hidden;
+}
+
+.envelope-flap {
+    content: '';
+    width: 0;
+    height: 0;
+    border-left: 45px solid transparent;
+    border-right: 45px solid transparent;
+    border-bottom: 45px solid #f36363;
+    display: block;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: auto;
+    transform: translateY(0);
+}
+
+.letter--open .envelope-flap {
+    transform: translateY(-45px);
+}
+
+.letter--open .envelope-detail {
+    border-top: 2px solid #e25b5b;
+}
+
+.envelope-detail {
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    display: block;
+    position: absolute;
+    background: #f36363;
+    border-top: 2px solid transparent;
+
+    &:before {
+        content: '';
+        width: 70px;
+        height: 70px;
+        background: #f36363;
+        display: inline-block;
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 30px;
+        margin: auto;
+        transform: rotate(45deg);
+        border: 4px solid #e65454;
+    }
+
+    &:after {
+        content: '';
+        width: 70px;
+        height: 70px;
+        background: #f36363;
+        display: block;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: -45px;
+        margin: auto;
+        transform: rotate(45deg);
+        border: 4px solid #e65454;
+    }
+}
+
+.envelope__fold {
+    height: 25px;
+    width: 86px;
+    background: #f36363;
+    border: 4px solid #e65454;
+    display: block;
+    position: absolute;
+    bottom: 30px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    transition: all 0.3s ease;
+    border-radius: 3px;
+}
+
+.paper-close {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    display: inline-block;
+    cursor: pointer;
+}
+
 /* responesive */
 /* tablet */
 @media only screen and (max-width: 768px) {
+
     .message,
     .dad {
         width: 100%;
         font-size: 9px;
-}
+    }
 }
 
 
 /* Iphone */
 @media (min-width: 740px) and (max-width: 1023px) {
+
     .message,
     .dad {
         font-size: 14px;
-}
+    }
 }
 
 /* Samsung */
 @media only screen and (max-width: 360px) {
+
     .message,
     .dad {
         font-size: 7px;
-}
+    }
 
     .first {
         transform: translateY(110px);
